2015-11-09  Nik Nyby  <nnyby@columbia.edu>

	* Fixed bug where video thumbnails could be missing when
	using the poster attribute.

2015-11-02  Nik Nyby  <nnyby@columbia.edu>

	* Don't alter the aspect ratio of the image in the asset
	finder.